files/green/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tomcat-green
  name: tomcat-green-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector: 
    app: tomcat-green
  type: LoadBalancer
