files/green/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
spec:
  rules:
  - host: apavarnitsyn-app.k8s.playptit.by
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat-green-svc
          servicePort: 8080
